--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "typescript": "^5",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
