--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "node": ">=18.12.0"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
