--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.2.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
